--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
   <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cookie Consent Modal</title>
   <style>
+    body.modal-open {
+      overflow: hidden;
+    }
+
     body.modal-open .mainContent {
       filter: blur(5px);
       pointer-events: none;
@@ -33,7 +40,7 @@
     }
 
     .modalContent {
-      background: #fff;
+      background: linear-gradient(135deg, #ff7b7b, #ffdd00);
       padding: 30px;
       max-width: 500px;
       width: 90%;
@@ -44,33 +51,35 @@
     }
 
     .modalContent h1 {
-      font-size: 22px;
+      font-size: 24px;
       margin-bottom: 15px;
+      color: white;
+      font-weight: bold;
     }
 
     .modalContent p {
-      font-size: 15px;
-      color: #333;
-      line-height: 1.5;
+      font-size: 16px;
+      color: #fff;
+      line-height: 1.6;
       margin-bottom: 25px;
     }
 
     .modalContent a {
-      color: #007bff;
+      color: #ffdd00;
       text-decoration: underline;
     }
 
     .btnGroup {
       display: flex;
       justify-content: center;
-      gap: 15px;
+      gap: 20px;
       flex-wrap: wrap;
     }
 
     .actionBtn {
       padding: 12px 24px;
-      font-size: 15px;
-      font-weight: 500;
+      font-size: 16px;
+      font-weight: bold;
       border: none;
       border-radius: 6px;
       cursor: pointer;
@@ -78,21 +87,21 @@
     }
 
     .acceptBtn {
-      background-color: #007bff;
-      color: #fff;
+      background-color: #28a745;
+      color: white;
     }
 
     .acceptBtn:hover {
-      background-color: #0056b3;
+      background-color: #218838;
     }
 
     .declineBtn {
-      background-color: #e0e0e0;
-      color: #333;
+      background-color: #dc3545;
+      color: white;
     }
 
     .declineBtn:hover {
-      background-color: #c4c4c4;
+      background-color: #c82333;
     }
 
     @keyframes fadeIn {
@@ -110,18 +119,17 @@
 <body>
 
 <div class="mainContent">
-  <h2 style="text-align:center; padding: 50px;">Welcome to My Website!</h2>
+  <h2 style="text-align:center; padding: 50px;">Welcome to My Colorful Website!</h2>
   <p style="text-align:center;">Your actual website content goes here.</p>
 </div>
 
 <div id="modal" class="modalWrapper">
   <div class="modalContent">
-    <h1>We Use Cookies</h1>
+    <h1>We Use Cookies!</h1>
     <p>
-      This website uses cookies to personalize content and ads, provide social media features,
-      and analyze our traffic. You may accept or decline below.
+      This website uses cookies to enhance your experience. You can accept or decline below.
       <br><br>
-      Read our <a href="https://www.google.com" target="_blank">Privacy Policy</a>.
+      Read our <a href="https://google.com" target="_blank">Privacy Policy</a>.
     </p>
     <div class="btnGroup">
       <button id="acceptBtn" class="actionBtn acceptBtn">Accept</button>
@@ -135,7 +143,7 @@
   const acceptBtn = document.getElementById("acceptBtn");
   const declineBtn = document.getElementById("declineBtn");
 
-  const redirectUrl = "https://www.google.com"; // Same for both
+  const redirectUrl = "https://google.com";  // Updated to google.com
 
   window.addEventListener("load", () => {
     modal.classList.add("show");
@@ -151,6 +159,10 @@
   acceptBtn.addEventListener("click", closeModalAndRedirect);
   declineBtn.addEventListener("click", closeModalAndRedirect);
 </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
