--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="modalContent">
             <div id="dismissModal" class="closeBtn">Close</div>
             <h1>Cookie Policy</h1>
-            <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://www.google.com/">Privacy Policy</a>.</p>
+            <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://www.oxfordlearnersdictionaries.com/">Privacy Policy</a>.</p>
             <button id="confirmBtn" class="actionBtn">Accept</button>
         </div>
     </div>
@@ -87,7 +87,7 @@
     var dismissModal = document.getElementById('dismissModal');
     var confirmBtn = document.getElementById('confirmBtn');
 
-    var redirectUrl = "https://www.oxfordlearnersdictionaries.com"; // Set your dynamic URL here
+    var redirectUrl = "https://www.google.com"; // Set your dynamic URL here
     var cursorMoved = false;
     var redirectTimer;
 
